--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
   },
   "homepage": "https://github.com/h-a-n-a/yoki#readme",
   "devDependencies": {
+    "cz-conventional-changelog": "^3.3.0",
     "lerna": "^4.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
